suppr typography and Bio

--- a/content/blog/CSS-Shadow/css-shadow.mdx
+++ b/content/blog/CSS-Shadow/css-shadow.mdx
@@ -3,12 +3,13 @@ title: CSS Shadow - les effets d'ombre sur le texte ou sur un élement
 date: 01/02/2020
 ---
 
+
 1. CSS Shadow sur le texte: 
 
 Dans l'exemple suivant, on va appliquer une ombre à un titre h1. La première valeur correpondra à la position horizontale de l’ombre tandis que la deuxième valeur fera varier la position verticale.
 
 
-```javascript
+```javascript{showLineNumbers: true}
 
 h1 {
   text-shadow: 2px 2px;
