--- a/content/blog/Gatsby-les-onglets/Gatsby-les-onglets.mdx
+++ b/content/blog/Gatsby-les-onglets/Gatsby-les-onglets.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Gatsby: configuration des onglets de navigation"
-date: "29/01/2020"
+date: "29 01 2020"
 ---
 
 Bien configurer les onglets permet d'améliorer considérablement votre référencement.Voici la marche à suivre:
